Continuação do exemplo da aula #05.

--- a/Exemplos/ExemploAula05/ExemploAula05/Base.lproj/Main.storyboard
+++ b/Exemplos/ExemploAula05/ExemploAula05/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1iN-QH-Vly">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -7,38 +7,207 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Tab Bar Controller-->
+        <scene sceneID="uqF-jv-rUb">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ExemploAula05" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tabBarController id="1iN-QH-Vly" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yAG-hV-bkJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="ecw-m1-czF" kind="relationship" relationship="viewControllers" id="W3G-wL-x2B"/>
+                        <segue destination="5fN-R6-SUr" kind="relationship" relationship="viewControllers" id="A70-XR-w5g"/>
+                        <segue destination="Gsp-2q-6vC" kind="relationship" relationship="viewControllers" id="PIb-1M-3Zp"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vos-HL-fwj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2530" y="1185"/>
+        </scene>
+        <!--Tela Amarela-->
+        <scene sceneID="a52-qq-R9c">
+            <objects>
+                <viewController id="qdE-Xx-Y9q" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6LE-OT-jRz">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YZZ-7G-vfK" customClass="FaceView" customModule="ExemploAula05" customModuleProvider="target">
-                                <rect key="frame" x="37" y="183.5" width="300" height="300"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gEa-PS-iHN">
+                                <rect key="frame" x="112" y="100" width="151" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Vai Para o Vermelho!!!"/>
+                                <connections>
+                                    <segue destination="rJa-VC-0ME" kind="show" id="AjY-rg-8WE"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" name="yellow"/>
+                        <viewLayoutGuide key="safeArea" id="0Zt-Bc-TNP"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Tela Amarela" id="CxK-xN-drq"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dTm-ym-hD9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="566" y="-5"/>
+        </scene>
+        <!--Tela Laranjada-->
+        <scene sceneID="pGs-fQ-nlc">
+            <objects>
+                <viewController id="ThL-og-AgA" customClass="TelaLaranjadaViewController" customModule="ExemploAula05" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LHU-D4-tiK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RZa-gB-zpr" customClass="FaceView" customModule="ExemploAula05" customModuleProvider="target">
+                                <rect key="frame" x="-0.5" y="233" width="375" height="200"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <gestureRecognizers/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="YZZ-7G-vfK" secondAttribute="height" multiplier="1:1" id="WUD-GY-1oi"/>
+                                    <constraint firstAttribute="width" secondItem="RZa-gB-zpr" secondAttribute="height" multiplier="15:8" id="mtO-dE-1zm"/>
                                 </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="l6c-Wb-YbB" appends="YES" id="FMa-oK-KRH"/>
+                                </connections>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" name="MedicOrange"/>
                         <constraints>
-                            <constraint firstItem="YZZ-7G-vfK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YT8-qQ-1H0"/>
-                            <constraint firstItem="YZZ-7G-vfK" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8" id="fQF-BF-pIZ"/>
-                            <constraint firstItem="YZZ-7G-vfK" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="voJ-Hu-qvb"/>
+                            <constraint firstItem="RZa-gB-zpr" firstAttribute="width" secondItem="LHU-D4-tiK" secondAttribute="width" id="IhN-X1-B9W"/>
+                            <constraint firstItem="RZa-gB-zpr" firstAttribute="centerY" secondItem="LHU-D4-tiK" secondAttribute="centerY" id="OEg-bd-yaH"/>
+                            <constraint firstItem="RZa-gB-zpr" firstAttribute="centerX" secondItem="LHU-D4-tiK" secondAttribute="centerX" id="PEk-ZB-bdx"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="qQK-TX-bQh"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Tela Laranjada" id="7Bv-xK-PVf"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LzL-9I-Rff" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="l6c-Wb-YbB">
+                    <connections>
+                        <segue destination="ch7-dm-UTX" kind="show" identifier="mudaDeTelaComTrianguloSegue" id="QC5-rh-eBw"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="566" y="1353"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="uvF-3o-goA">
+            <objects>
+                <viewController id="ch7-dm-UTX" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1pU-73-GXS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="nei-Cu-mft"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NTk-z7-qQB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1495" y="1353"/>
+        </scene>
+        <!--Tela Vermelha-->
+        <scene sceneID="jl1-pP-hdt">
+            <objects>
+                <viewController id="rJa-VC-0ME" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rdo-RC-zWW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V9t-Bo-YZU">
+                                <rect key="frame" x="104" y="95" width="142" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Vai Para o Amarelo!!!"/>
+                                <connections>
+                                    <segue destination="qdE-Xx-Y9q" kind="show" id="VjW-8d-WTT"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" name="red"/>
+                        <viewLayoutGuide key="safeArea" id="TIa-si-9AC"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Tela Vermelha" id="3aa-zI-5Oh"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WqI-dk-8bu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="566" y="663"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="92z-mg-ELk">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5fN-R6-SUr" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="featured" id="6u8-Oc-maQ"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="T4J-GY-S5c">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="qdE-Xx-Y9q" kind="relationship" relationship="rootViewController" id="X3w-wf-kbH"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jNc-1J-ta3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-384" y="-4.497751124437781"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="3hQ-Zd-mGj">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Gsp-2q-6vC" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="search" id="lM5-x3-GUu"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="LHQ-9I-mAb">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="rJa-VC-0ME" kind="relationship" relationship="rootViewController" id="S1n-kE-HOq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cjM-Dz-Lz1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-404.80000000000001" y="663.86806596701649"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Sch-au-tjQ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ecw-m1-czF" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="recents" id="1Wa-fm-vC2"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="1eN-gl-gUR">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ThL-og-AgA" kind="relationship" relationship="rootViewController" id="Mgf-ek-XWK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="abf-NZ-sUP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-499.19999999999999" y="1353.8230884557722"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="MedicOrange">
+            <color red="1" green="0.57254901960000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="red">
+            <color red="0.89800000189999996" green="0.067000001670000003" blue="0.1330000013" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="yellow">
+            <color red="1" green="0.87000000479999995" blue="0.16599999369999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="AjY-rg-8WE"/>
+        <segue reference="VjW-8d-WTT"/>
+    </inferredMetricsTieBreakers>
 </document>
